<resources>
    <string name="app_name">FileShare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="array_name">
        <item>File Type</item>
        <item>Shared With</item>
    </string-array>
    <string name="title_activity_file_pager">FilePagerActivity</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="file1">IMAGES</string>
    <string name="file2">VIDEOS</string>
    <string name="file3">PDF</string>
    <string name="file4">AUDIO</string>
    <string name="file5">CONT</string>
    <string name="file6">OTHER</string>


</resources>
